fix(SA): 调整模拟退火算法逻辑
- 调整了模拟退火算法的内容使其终于可以收敛

TODO
- 其他两个启发式算法仍然不收敛