@@ -17,7 +17,7 @@ public class FirstFitSolver {
             }
             if (!placed) {
                 result.addLayer(shelfLength, new Layer(shelfLength));
-                shelf.get(shelf.size() - 1).addItem(item);
+                shelf.getLast().addItem(item);
             }
         }
 
