@@ -20,7 +20,7 @@ public class GreedySolver {
             }
             if (!placed) {
                 result.addLayer(shelfLength, new Layer(shelfLength));
-                shelf.get(shelf.size() - 1).addItem(item);
+                shelf.getLast().addItem(item);
             }
         }
 
